add auther and publish date

--- a/app-tirads-calc.html
+++ b/app-tirads-calc.html
@@ -6,6 +6,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="author" content="Kittipos Sirivongrungson">
+<meta name="dcterms.date" content="2022-07-28">
 
 <title>TIRADS Calculator</title>
 <style>
@@ -57,7 +59,19 @@ ul.task-list{list-style: none;}
 
 <div class="quarto-title-meta">
 
+    <div>
+    <div class="quarto-title-meta-heading">Author</div>
+    <div class="quarto-title-meta-contents">
+             <p>Kittipos Sirivongrungson </p>
+          </div>
+  </div>
     
+    <div>
+    <div class="quarto-title-meta-heading">Published</div>
+    <div class="quarto-title-meta-contents">
+      <p class="date">July 28, 2022</p>
+    </div>
+  </div>
     
   </div>
   
