--- a/app-tirads-calc.html
+++ b/app-tirads-calc.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Kittipos Sirivongrungson">
-<meta name="dcterms.date" content="2022-07-29">
+<meta name="dcterms.date" content="2022-08-05">
 
 <title>ACR TI-RADS Calculator</title>
 <style>
@@ -90,7 +90,7 @@ div.csl-indent {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">July 29, 2022</p>
+      <p class="date">August 5, 2022</p>
     </div>
   </div>
     
@@ -129,6 +129,10 @@ About
 </section>
 <section id="categories" class="level2">
 <h2 class="anchored" data-anchor-id="categories">Categories</h2>
+<div class="panel-tabset">
+<ul class="nav nav-tabs" role="tablist"><li class="nav-item" role="presentation"><a class="nav-link active" id="tabset-1-1-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-1" role="tab" aria-controls="tabset-1-1" aria-selected="true" href="">✅</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-1-2-tab" data-bs-toggle="tab" data-bs-target="#tabset-1-2" role="tab" aria-controls="tabset-1-2" aria-selected="false" href="">🏞</a></li></ul>
+<div class="tab-content">
+<div id="tabset-1-1" class="tab-pane active" role="tabpanel" aria-labelledby="tabset-1-1-tab">
 <div class="cell">
 <div class="cell-output-display">
 <div id="composition" style="width:400px;" class="form-group shiny-input-radiogroup shiny-input-container" role="radiogroup" aria-labelledby="composition-label">
@@ -160,6 +164,17 @@ About
 <span>Solid or almost completely solid (2)</span>
 </label>
 </div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div id="tabset-1-2" class="tab-pane" role="tabpanel" aria-labelledby="tabset-1-2-tab">
+<div id="fig-composition" class="quarto-figure quarto-figure-center anchored">
+<figure class="figure">
+<p><img src="./images/composition.png" class="img-fluid figure-img" style="width:80.0%"></p>
+<p></p><figcaption class="figure-caption">Figure 2: Composition <span class="citation" data-cites="RadAssist">(<a href="#ref-RadAssist" role="doc-biblioref">Habib Ahmad, n.d.</a>)</span></figcaption><p></p>
+</figure>
 </div>
 </div>
 </div>
@@ -483,13 +498,16 @@ ojs_define <- function(..., .session = shiny::getDefaultReactiveDomain()) {
 <!--html_preserve-->
 
 <script type="application/shiny-prerendered" data-context="execution_dependencies">
-{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57]}},"value":[{"type":"character","attributes":{},"value":["assertthat","base","cli","colorspace","compiler","crayon","datasets","DBI","digest","dplyr","ellipsis","evaluate","fansi","fastmap","generics","ggplot2","glue","graphics","grDevices","grid","gt","gtable","htmltools","htmlwidgets","httpuv","jsonlite","knitr","later","lifecycle","magrittr","methods","mime","munsell","pillar","pkgconfig","promises","purrr","R6","Rcpp","renv","rlang","rmarkdown","rstudioapi","scales","shiny","stats","stringi","stringr","tibble","tidyselect","tools","utf8","utils","vctrs","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["0.2.1","4.2.0","3.3.0","2.0-3","4.2.0","1.5.1","4.2.0","1.1.2","0.6.29","1.0.9","0.3.2","0.15","1.0.3","1.1.0","0.1.2","3.3.6","1.6.2","4.2.0","4.2.0","4.2.0","0.6.0","0.3.0","0.5.2","1.5.4","1.6.5","1.8.0","1.39","1.3.0","1.0.1","2.0.3","4.2.0","0.12","0.5.0","1.7.0","2.0.3","1.2.0.1","0.3.4","2.5.1","1.0.8.3","0.15.5","1.0.2","2.14","0.13","1.2.0","1.7.1","4.2.0","1.7.6","1.4.0","3.1.7","1.1.2","4.2.0","1.2.2","4.2.0","0.4.1","0.31","1.8-4","2.3.5"]}]}]}
+{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56]}},"value":[{"type":"character","attributes":{},"value":["assertthat","base","cli","colorspace","compiler","crayon","datasets","DBI","digest","dplyr","ellipsis","evaluate","fansi","fastmap","generics","ggplot2","glue","graphics","grDevices","grid","gt","gtable","htmltools","htmlwidgets","httpuv","jsonlite","knitr","later","lifecycle","magrittr","methods","mime","munsell","pillar","pkgconfig","promises","purrr","R6","Rcpp","renv","rlang","rmarkdown","scales","shiny","stats","stringi","stringr","tibble","tidyselect","tools","utf8","utils","vctrs","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["0.2.1","4.2.0","3.3.0","2.0-3","4.2.0","1.5.1","4.2.0","1.1.2","0.6.29","1.0.9","0.3.2","0.15","1.0.3","1.1.0","0.1.2","3.3.6","1.6.2","4.2.0","4.2.0","4.2.0","0.6.0","0.3.0","0.5.2","1.5.4","1.6.5","1.8.0","1.39","1.3.0","1.0.1","2.0.3","4.2.0","0.12","0.5.0","1.7.0","2.0.3","1.2.0.1","0.3.4","2.5.1","1.0.8.3","0.15.5","1.0.2","2.14","1.2.0","1.7.1","4.2.0","1.7.6","1.4.0","3.1.7","1.1.2","4.2.0","1.2.2","4.2.0","0.4.1","0.31","1.8-4","2.3.5"]}]}]}
 </script>
 <!--/html_preserve-->
 
 </section>
 
 <div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography"><h2 class="anchored quarto-appendix-heading">References</h2><div id="refs" class="references csl-bib-body hanging-indent" role="doc-bibliography">
+<div id="ref-RadAssist" class="csl-entry" role="doc-biblioentry">
+Habib Ahmad, Aad van der Lugt. n.d. <span>“The Radiology Assistant : TI-RADS - Thyroid Imaging Reporting and Data System.”</span> <a href="https://radiologyassistant.nl/head-neck/ti-rads/ti-rads">https://radiologyassistant.nl/head-neck/ti-rads/ti-rads</a>.
+</div>
 <div id="ref-ACR-TIRADS-WhitePaper" class="csl-entry" role="doc-biblioentry">
 Tessler, Franklin N., William D. Middleton, Edward G. Grant, Jenny K. Hoang, Lincoln L. Berland, Sharlene A. Teefey, John J. Cronan, et al. 2017. <span>“ACR Thyroid Imaging, Reporting and Data System (TI-RADS): White Paper of the ACR TI-RADS Committee.”</span> <em>Journal of the American College of Radiology: JACR</em> 14 (5): 587–95. <a href="https://doi.org/10.1016/j.jacr.2017.01.046">https://doi.org/10.1016/j.jacr.2017.01.046</a>.
 </div>
