add spongiform def

--- a/app-tirads-calc.html
+++ b/app-tirads-calc.html
@@ -123,7 +123,7 @@ About
 <div id="fig-tirads-chart" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
 <p><img src="images/tirads-chart.png" class="img-fluid figure-img" style="width:80.0%"></p>
-<p></p><figcaption class="figure-caption">Figure 1: ACR TI-RADS Chart to determine TI-RADS Level and Suggestions <span class="citation" data-cites="ACR-TIRADS-WhitePaper">(<a href="#ref-ACR-TIRADS-WhitePaper" role="doc-biblioref">Tessler et al. 2017</a>)</span></figcaption><p></p>
+<p></p><figcaption class="figure-caption">Figure 1: ACR TI-RADS Chart to determine TI-RADS Level and Suggestions <span class="citation" data-cites="ACR-TIRADS-WhitePaper">[<a href="#ref-ACR-TIRADS-WhitePaper" role="doc-biblioref">1</a>]</span></figcaption><p></p>
 </figure>
 </div>
 </section>
@@ -173,9 +173,12 @@ About
 <div id="fig-composition" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
 <p><img src="./images/composition.png" class="img-fluid figure-img" style="width:80.0%"></p>
-<p></p><figcaption class="figure-caption">Figure 2: Composition <span class="citation" data-cites="RadAssist">(<a href="#ref-RadAssist" role="doc-biblioref">Habib Ahmad, n.d.</a>)</span></figcaption><p></p>
+<p></p><figcaption class="figure-caption">Figure 2: <strong>Composition</strong> <span class="citation" data-cites="RadAssist">[<a href="#ref-RadAssist" role="doc-biblioref">2</a>]</span></figcaption><p></p>
 </figure>
 </div>
+<ul>
+<li><strong>Spongiform:</strong> aggregation of multiple microcystic components ≥ 50% of the volume of the nodule <span class="citation" data-cites="ACR-TIRADS-Lexicon">[<a href="#ref-ACR-TIRADS-Lexicon" role="doc-biblioref">3</a>]</span>.</li>
+</ul>
 </div>
 </div>
 </div>
@@ -504,12 +507,15 @@ ojs_define <- function(..., .session = shiny::getDefaultReactiveDomain()) {
 
 </section>
 
-<div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography"><h2 class="anchored quarto-appendix-heading">References</h2><div id="refs" class="references csl-bib-body hanging-indent" role="doc-bibliography">
-<div id="ref-RadAssist" class="csl-entry" role="doc-biblioentry">
-Habib Ahmad, Aad van der Lugt. n.d. <span>“The Radiology Assistant : TI-RADS - Thyroid Imaging Reporting and Data System.”</span> <a href="https://radiologyassistant.nl/head-neck/ti-rads/ti-rads">https://radiologyassistant.nl/head-neck/ti-rads/ti-rads</a>.
-</div>
+<div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography"><h2 class="anchored quarto-appendix-heading">References</h2><div id="refs" class="references csl-bib-body" role="doc-bibliography">
 <div id="ref-ACR-TIRADS-WhitePaper" class="csl-entry" role="doc-biblioentry">
-Tessler, Franklin N., William D. Middleton, Edward G. Grant, Jenny K. Hoang, Lincoln L. Berland, Sharlene A. Teefey, John J. Cronan, et al. 2017. <span>“ACR Thyroid Imaging, Reporting and Data System (TI-RADS): White Paper of the ACR TI-RADS Committee.”</span> <em>Journal of the American College of Radiology: JACR</em> 14 (5): 587–95. <a href="https://doi.org/10.1016/j.jacr.2017.01.046">https://doi.org/10.1016/j.jacr.2017.01.046</a>.
+<div class="csl-left-margin">[1] </div><div class="csl-right-inline">F.N. Tessler, W.D. Middleton, E.G. Grant, J.K. Hoang, L.L. Berland, S.A. Teefey, J.J. Cronan, M.D. Beland, T.S. Desser, M.C. Frates, L.W. Hammers, U.M. Hamper, J.E. Langer, C.C. Reading, L.M. Scoutt, A.T. Stavros, ACR thyroid imaging, reporting and data system (TI-RADS): White paper of the ACR TI-RADS committee, Journal of the American College of Radiology: JACR. 14 (2017) 587–595. https://doi.org/<a href="https://doi.org/10.1016/j.jacr.2017.01.046">10.1016/j.jacr.2017.01.046</a>.</div>
+</div>
+<div id="ref-RadAssist" class="csl-entry" role="doc-biblioentry">
+<div class="csl-left-margin">[2] </div><div class="csl-right-inline">A. van der L. Habib Ahmad, The radiology assistant : TI-RADS - thyroid imaging reporting and data system, (n.d.). <a href="https://radiologyassistant.nl/head-neck/ti-rads/ti-rads">https://radiologyassistant.nl/head-neck/ti-rads/ti-rads</a>.</div>
+</div>
+<div id="ref-ACR-TIRADS-Lexicon" class="csl-entry" role="doc-biblioentry">
+<div class="csl-left-margin">[3] </div><div class="csl-right-inline">E.G. Grant, F.N. Tessler, J.K. Hoang, J.E. Langer, M.D. Beland, L.L. Berland, J.J. Cronan, T.S. Desser, M.C. Frates, U.M. Hamper, W.D. Middleton, C.C. Reading, L.M. Scoutt, A.T. Stavros, S.A. Teefey, Thyroid ultrasound reporting lexicon: White paper of the ACR thyroid imaging, reporting and data system (TIRADS) committee, Journal of the American College of Radiology: JACR. 12 (2015) 1272–1279. https://doi.org/<a href="https://doi.org/10.1016/j.jacr.2015.07.011">10.1016/j.jacr.2015.07.011</a>.</div>
 </div>
 </div></section></div></main>
 <!-- /main column -->
