--- a/app-tirads-calc.html
+++ b/app-tirads-calc.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Kittipos Sirivongrungson">
-<meta name="dcterms.date" content="2022-08-05">
+<meta name="dcterms.date" content="2022-08-06">
 
 <title>ACR TI-RADS Calculator</title>
 <style>
@@ -98,7 +98,7 @@ div.csl-indent {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">August 5, 2022</p>
+      <p class="date">August 6, 2022</p>
     </div>
   </div>
     
@@ -290,12 +290,14 @@ About
 </section>
 <section id="margin" class="level3">
 <h3 class="anchored" data-anchor-id="margin">Margin</h3>
+<div class="panel-tabset">
+<ul class="nav nav-tabs" role="tablist"><li class="nav-item" role="presentation"><a class="nav-link active" id="tabset-4-1-tab" data-bs-toggle="tab" data-bs-target="#tabset-4-1" role="tab" aria-controls="tabset-4-1" aria-selected="true" href="">✅</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-4-2-tab" data-bs-toggle="tab" data-bs-target="#tabset-4-2" role="tab" aria-controls="tabset-4-2" aria-selected="false" href="">🏞</a></li></ul>
+<div class="tab-content">
+<div id="tabset-4-1" class="tab-pane active" role="tabpanel" aria-labelledby="tabset-4-1-tab">
 <div class="cell">
 <div class="cell-output-display">
 <div id="margin" style="width:400px;" class="form-group shiny-input-radiogroup shiny-input-container" role="radiogroup" aria-labelledby="margin-label">
-<label class="control-label" id="margin-label" for="margin">
-<b>Margin</b>
-</label>
+<label class="control-label" id="margin-label" for="margin"></label>
 <div class="shiny-options-group">
 <div class="radio">
 <label>
@@ -322,6 +324,25 @@ About
 </label>
 </div>
 </div>
+</div>
+</div>
+</div>
+</div>
+<div id="tabset-4-2" class="tab-pane" role="tabpanel" aria-labelledby="tabset-4-2-tab">
+<div id="fig-margin" class="quarto-figure quarto-figure-center anchored">
+<figure class="figure">
+<p><img src="./images/margin.png" class="img-fluid figure-img" style="width:80.0%"></p>
+<p></p><figcaption class="figure-caption">Figure 5: <strong>Margin</strong> <span class="citation" data-cites="ACR-TIRADS-Lexicon ACR-TIRADS-UserGuide RadAssist">[<a href="#ref-RadAssist" role="doc-biblioref">2</a>,<a href="#ref-ACR-TIRADS-Lexicon" role="doc-biblioref">3</a>,<a href="#ref-ACR-TIRADS-UserGuide" role="doc-biblioref">5</a>]</span></figcaption><p></p>
+</figure>
+</div>
+<p><strong>Definition</strong> <span class="citation" data-cites="ACR-TIRADS-Lexicon">[<a href="#ref-ACR-TIRADS-Lexicon" role="doc-biblioref">3</a>]</span></p>
+<ul>
+<li><p><strong>Smooth:</strong> uninterrupted, well-defined, curvilinear edge typically forming a spherical or elliptical shape.</p></li>
+<li><p><strong>Irregular margin:</strong> spiculated, jagged, or with sharp angles with or without clear soft tissue protrusions into the parenchyma.</p></li>
+<li><p><strong>Lobulated:</strong> border has focal rounded soft tissue protrusions that extend into the adjacent parenchyma.</p></li>
+<li><p><strong>Ill-defined:</strong> border of the nodule is difficult to distinguish from thyroid parenchyma; the nodule lacks irregular or lobulated margins.</p></li>
+<li><p><strong>Extrathyroidal extension:</strong> nodule extends through the thyroid capsule.</p></li>
+</ul>
 </div>
 </div>
 </div>
@@ -566,7 +587,7 @@ ojs_define <- function(..., .session = shiny::getDefaultReactiveDomain()) {
 <!--html_preserve-->
 
 <script type="application/shiny-prerendered" data-context="execution_dependencies">
-{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57]}},"value":[{"type":"character","attributes":{},"value":["assertthat","base","cli","colorspace","compiler","crayon","datasets","DBI","digest","dplyr","ellipsis","evaluate","fansi","fastmap","generics","ggplot2","glue","graphics","grDevices","grid","gt","gtable","htmltools","htmlwidgets","httpuv","jsonlite","knitr","later","lifecycle","magrittr","methods","mime","munsell","pillar","pkgconfig","promises","purrr","R6","Rcpp","renv","rlang","rmarkdown","rstudioapi","scales","shiny","stats","stringi","stringr","tibble","tidyselect","tools","utf8","utils","vctrs","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["0.2.1","4.2.0","3.3.0","2.0-3","4.2.0","1.5.1","4.2.0","1.1.2","0.6.29","1.0.9","0.3.2","0.15","1.0.3","1.1.0","0.1.2","3.3.6","1.6.2","4.2.0","4.2.0","4.2.0","0.6.0","0.3.0","0.5.2","1.5.4","1.6.5","1.8.0","1.39","1.3.0","1.0.1","2.0.3","4.2.0","0.12","0.5.0","1.7.0","2.0.3","1.2.0.1","0.3.4","2.5.1","1.0.8.3","0.15.5","1.0.2","2.14","0.13","1.2.0","1.7.1","4.2.0","1.7.6","1.4.0","3.1.7","1.1.2","4.2.0","1.2.2","4.2.0","0.4.1","0.31","1.8-4","2.3.5"]}]}]}
+{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56]}},"value":[{"type":"character","attributes":{},"value":["assertthat","base","cli","colorspace","compiler","crayon","datasets","DBI","digest","dplyr","ellipsis","evaluate","fansi","fastmap","generics","ggplot2","glue","graphics","grDevices","grid","gt","gtable","htmltools","htmlwidgets","httpuv","jsonlite","knitr","later","lifecycle","magrittr","methods","mime","munsell","pillar","pkgconfig","promises","purrr","R6","Rcpp","renv","rlang","rmarkdown","scales","shiny","stats","stringi","stringr","tibble","tidyselect","tools","utf8","utils","vctrs","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["0.2.1","4.2.0","3.3.0","2.0-3","4.2.0","1.5.1","4.2.0","1.1.2","0.6.29","1.0.9","0.3.2","0.15","1.0.3","1.1.0","0.1.2","3.3.6","1.6.2","4.2.0","4.2.0","4.2.0","0.6.0","0.3.0","0.5.2","1.5.4","1.6.5","1.8.0","1.39","1.3.0","1.0.1","2.0.3","4.2.0","0.12","0.5.0","1.7.0","2.0.3","1.2.0.1","0.3.4","2.5.1","1.0.8.3","0.15.5","1.0.2","2.14","1.2.0","1.7.1","4.2.0","1.7.6","1.4.0","3.1.7","1.1.2","4.2.0","1.2.2","4.2.0","0.4.1","0.31","1.8-4","2.3.5"]}]}]}
 </script>
 <!--/html_preserve-->
 
@@ -584,6 +605,9 @@ ojs_define <- function(..., .session = shiny::getDefaultReactiveDomain()) {
 </div>
 <div id="ref-RadKey-ThyroidCyst" class="csl-entry" role="doc-biblioentry">
 <div class="csl-left-margin">[4] </div><div class="csl-right-inline">Z. Fryšák, Radiology key: Thyroid cysts, (2017). <a href="https://radiologykey.com/thyroid-cysts">https://radiologykey.com/thyroid-cysts</a>.</div>
+</div>
+<div id="ref-ACR-TIRADS-UserGuide" class="csl-entry" role="doc-biblioentry">
+<div class="csl-left-margin">[5] </div><div class="csl-right-inline">F.N. Tessler, W.D. Middleton, E.G. Grant, Thyroid imaging reporting and data system (TI-RADS): A user’s guide, Radiology. 287 (2018) 29–36. https://doi.org/<a href="https://doi.org/10.1148/radiol.2017171240">10.1148/radiol.2017171240</a>.</div>
 </div>
 </div></section></div></main>
 <!-- /main column -->
