--- a/app-tirads-calc.html
+++ b/app-tirads-calc.html
@@ -62,13 +62,12 @@ div.csl-indent {
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#charts" id="toc-charts" class="nav-link active" data-scroll-target="#charts">Charts</a></li>
-  <li><a href="#categories" id="toc-categories" class="nav-link" data-scroll-target="#categories">Categories</a>
+  <li><a href="#categories" id="toc-categories" class="nav-link active" data-scroll-target="#categories">Categories</a>
   <ul class="collapse">
   <li><a href="#composition" id="toc-composition" class="nav-link" data-scroll-target="#composition">Composition</a></li>
   <li><a href="#echogenicity" id="toc-echogenicity" class="nav-link" data-scroll-target="#echogenicity">Echogenicity</a></li>
   <li><a href="#shape" id="toc-shape" class="nav-link" data-scroll-target="#shape">Shape</a></li>
-  <li><a href="#margin" id="toc-margin" class="nav-link" data-scroll-target="#margin">Margin</a></li>
+  <li><a href="#sec-margin" id="toc-sec-margin" class="nav-link" data-scroll-target="#sec-margin">Margin</a></li>
   <li><a href="#echogenic-foci" id="toc-echogenic-foci" class="nav-link" data-scroll-target="#echogenic-foci">Echogenic foci</a></li>
   <li><a href="#size-cm" id="toc-size-cm" class="nav-link" data-scroll-target="#size-cm">Size (cm)</a></li>
   </ul></li>
@@ -126,15 +125,27 @@ About
 <p>This calculator was implemented from <a href="https://www.acr.org/Clinical-Resources/Reporting-and-Data-Systems/TI-RADS">ACR TI-RADS™</a> for thyroid ultrasound.</p>
 </div>
 </div>
-<section id="charts" class="level2">
-<h2 class="anchored" data-anchor-id="charts">Charts</h2>
+<div class="callout-tip callout callout-style-default callout-captioned">
+<div class="callout-header d-flex align-content-center" data-bs-toggle="collapse" data-bs-target=".callout-2-contents" aria-controls="callout-2" aria-expanded="false" aria-label="Toggle callout">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-caption-container flex-fill">
+Expand to see TI-RADS Charts
+</div>
+<div class="callout-btn-toggle d-inline-block border-0 py-1 ps-1 pe-0 float-end"><i class="callout-toggle"></i></div>
+</div>
+<div id="callout-2" class="callout-2-contents callout-collapse collapse">
+<div class="callout-body-container callout-body">
 <div id="fig-tirads-chart" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
 <p><img src="images/tirads-chart.png" class="img-fluid figure-img" style="width:80.0%"></p>
 <p></p><figcaption class="figure-caption">Figure 1: ACR TI-RADS Chart to determine TI-RADS Level and Suggestions <span class="citation" data-cites="ACR-TIRADS-WhitePaper">[<a href="#ref-ACR-TIRADS-WhitePaper" role="doc-biblioref">1</a>]</span></figcaption><p></p>
 </figure>
 </div>
-</section>
+</div>
+</div>
+</div>
 <section id="categories" class="level2">
 <h2 class="anchored" data-anchor-id="categories">Categories</h2>
 <section id="composition" class="level3">
@@ -181,7 +192,7 @@ About
 <div id="fig-composition" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
 <p><img src="./images/composition.png" class="img-fluid figure-img" style="width:80.0%"></p>
-<p></p><figcaption class="figure-caption">Figure 2: <strong>Composition</strong> (adapted from <span class="citation" data-cites="RadAssist">[<a href="#ref-RadAssist" role="doc-biblioref">2</a>]</span>)</figcaption><p></p>
+<p></p><figcaption class="figure-caption">Figure 2: <strong>Composition</strong> <span class="citation" data-cites="RadAssist">[<a href="#ref-RadAssist" role="doc-biblioref">2</a>]</span></figcaption><p></p>
 </figure>
 </div>
 <ul>
@@ -235,7 +246,7 @@ About
 <div id="fig-echogenicity" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
 <p><img src="./images/echogenicity.png" class="img-fluid figure-img" style="width:100.0%"></p>
-<p></p><figcaption class="figure-caption">Figure 3: <strong>Echogenicity</strong> (adapted from <span class="citation" data-cites="RadAssist RadKey-ThyroidCyst">[<a href="#ref-RadAssist" role="doc-biblioref">2</a>,<a href="#ref-RadKey-ThyroidCyst" role="doc-biblioref">4</a>]</span>)</figcaption><p></p>
+<p></p><figcaption class="figure-caption">Figure 3: <strong>Echogenicity</strong> <span class="citation" data-cites="RadAssist RadKey-ThyroidCyst">[<a href="#ref-RadAssist" role="doc-biblioref">2</a>,<a href="#ref-RadKey-ThyroidCyst" role="doc-biblioref">4</a>]</span></figcaption><p></p>
 </figure>
 </div>
 <ul>
@@ -288,8 +299,8 @@ About
 </div>
 </div>
 </section>
-<section id="margin" class="level3">
-<h3 class="anchored" data-anchor-id="margin">Margin</h3>
+<section id="sec-margin" class="level3">
+<h3 class="anchored" data-anchor-id="sec-margin">Margin</h3>
 <div class="panel-tabset">
 <ul class="nav nav-tabs" role="tablist"><li class="nav-item" role="presentation"><a class="nav-link active" id="tabset-4-1-tab" data-bs-toggle="tab" data-bs-target="#tabset-4-1" role="tab" aria-controls="tabset-4-1" aria-selected="true" href="">✅</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-4-2-tab" data-bs-toggle="tab" data-bs-target="#tabset-4-2" role="tab" aria-controls="tabset-4-2" aria-selected="false" href="">🏞</a></li></ul>
 <div class="tab-content">
@@ -349,11 +360,15 @@ About
 </section>
 <section id="echogenic-foci" class="level3">
 <h3 class="anchored" data-anchor-id="echogenic-foci">Echogenic foci</h3>
+<div class="panel-tabset">
+<ul class="nav nav-tabs" role="tablist"><li class="nav-item" role="presentation"><a class="nav-link active" id="tabset-5-1-tab" data-bs-toggle="tab" data-bs-target="#tabset-5-1" role="tab" aria-controls="tabset-5-1" aria-selected="true" href="">✅</a></li><li class="nav-item" role="presentation"><a class="nav-link" id="tabset-5-2-tab" data-bs-toggle="tab" data-bs-target="#tabset-5-2" role="tab" aria-controls="tabset-5-2" aria-selected="false" href="">🏞</a></li></ul>
+<div class="tab-content">
+<div id="tabset-5-1" class="tab-pane active" role="tabpanel" aria-labelledby="tabset-5-1-tab">
 <div class="cell">
 <div class="cell-output-display">
 <div id="echogenic_foci" style="width:400px;" class="form-group shiny-input-checkboxgroup shiny-input-container" role="group" aria-labelledby="echogenic_foci-label">
 <label class="control-label" id="echogenic_foci-label" for="echogenic_foci">
-<b>Echogenic foci</b>
+<b>Choose All That Apply</b>
 </label>
 <div class="shiny-options-group">
 <div class="checkbox">
@@ -384,6 +399,24 @@ About
 </div>
 </div>
 </div>
+</div>
+<div id="tabset-5-2" class="tab-pane" role="tabpanel" aria-labelledby="tabset-5-2-tab">
+<div id="fig-echogenic-foci" class="quarto-figure quarto-figure-center anchored">
+<figure class="figure">
+<p><img src="./images/echogenic-foci.png" class="img-fluid figure-img" style="width:80.0%"></p>
+<p></p><figcaption class="figure-caption">Figure 6: <strong>Echogenic foci</strong> <span class="citation" data-cites="ACR-TIRADS-Lexicon RadAssist">[<a href="#ref-RadAssist" role="doc-biblioref">2</a>,<a href="#ref-ACR-TIRADS-Lexicon" role="doc-biblioref">3</a>]</span></figcaption><p></p>
+</figure>
+</div>
+<p><strong>Definition</strong> <span class="citation" data-cites="ACR-TIRADS-Lexicon ACR-TIRADS-WhitePaper">[<a href="#ref-ACR-TIRADS-WhitePaper" role="doc-biblioref">1</a>,<a href="#ref-ACR-TIRADS-Lexicon" role="doc-biblioref">3</a>]</span></p>
+<ul>
+<li><p><strong>Large comet-tail artifacts:</strong> echogenic foci with <em>V-shaped echoes</em> &gt; 1 mm deep to them. They are associated with colloid and are strongly indicative of benignity when found within the cystic components of thyroid nodules.</p></li>
+<li><p><strong>Macrocalcifications:</strong> coarse echogenic foci accompanied by <strong><em>acoustic shadowing</em></strong>. Published data shows a weakly positive relationship with malignancy.</p></li>
+<li><p><strong>Peripheral (rim) calcifications:</strong> lie along all or part of a nodule’s margin. Publications suggest that they are more strongly associated with malignancy than macrocalcifications. <em>Interrupted</em> peripheral calcifications qualifies as a <em>lobulated</em> margin (see <a href="#sec-margin">Section&nbsp;1.4</a>).</p></li>
+<li><p><strong>Punctate echogenic foci:</strong> “Dot-like” foci smaller than macrocalcifications and are <strong><em>nonshadowing</em></strong>. In the solid components of thyroid nodules, they may correspond to the psammomatous calcifications associated with papillary cancers; therefore, considered <em>highly suspicious</em>.</p></li>
+</ul>
+</div>
+</div>
+</div>
 </section>
 <section id="size-cm" class="level3">
 <h3 class="anchored" data-anchor-id="size-cm">Size (cm)</h3>
@@ -396,7 +429,7 @@ About
 </div>
 </div>
 <div class="callout-tip callout callout-style-default callout-captioned">
-<div class="callout-header d-flex align-content-center" data-bs-toggle="collapse" data-bs-target=".callout-2-contents" aria-controls="callout-2" aria-expanded="false" aria-label="Toggle callout">
+<div class="callout-header d-flex align-content-center" data-bs-toggle="collapse" data-bs-target=".callout-3-contents" aria-controls="callout-3" aria-expanded="false" aria-label="Toggle callout">
 <div class="callout-icon-container">
 <i class="callout-icon"></i>
 </div>
@@ -405,7 +438,7 @@ How to measure size ?
 </div>
 <div class="callout-btn-toggle d-inline-block border-0 py-1 ps-1 pe-0 float-end"><i class="callout-toggle"></i></div>
 </div>
-<div id="callout-2" class="callout-2-contents callout-collapse collapse">
+<div id="callout-3" class="callout-3-contents callout-collapse collapse">
 <div class="callout-body-container callout-body">
 <p>Use maximal diameter in longitudinal, AP, or transverse plane <span class="citation" data-cites="ACR-TIRADS-Lexicon">[<a href="#ref-ACR-TIRADS-Lexicon" role="doc-biblioref">3</a>]</span>.</p>
 </div>
