up img size to 100% and polish

--- a/app-tirads-calc.html
+++ b/app-tirads-calc.html
@@ -137,9 +137,10 @@ Expand to see TI-RADS Charts
 </div>
 <div id="callout-2" class="callout-2-contents callout-collapse collapse">
 <div class="callout-body-container callout-body">
+<p>This calculator was implemented using the following <a href="#fig-tirads-chart">Figure&nbsp;1</a> algorithm.</p>
 <div id="fig-tirads-chart" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
-<p><img src="images/tirads-chart.png" class="img-fluid figure-img" style="width:80.0%"></p>
+<p><img src="images/tirads-chart.png" class="img-fluid figure-img" style="width:100.0%"></p>
 <p></p><figcaption class="figure-caption">Figure 1: ACR TI-RADS Chart to determine TI-RADS Level and Suggestions <span class="citation" data-cites="ACR-TIRADS-WhitePaper">[<a href="#ref-ACR-TIRADS-WhitePaper" role="doc-biblioref">1</a>]</span></figcaption><p></p>
 </figure>
 </div>
@@ -148,6 +149,7 @@ Expand to see TI-RADS Charts
 </div>
 <section id="categories" class="level2">
 <h2 class="anchored" data-anchor-id="categories">Categories</h2>
+<p>Select your option from “✅” tab or see example images from “🏞” tab.</p>
 <section id="composition" class="level3">
 <h3 class="anchored" data-anchor-id="composition">Composition</h3>
 <div class="panel-tabset">
@@ -191,7 +193,7 @@ Expand to see TI-RADS Charts
 <div id="tabset-1-2" class="tab-pane" role="tabpanel" aria-labelledby="tabset-1-2-tab">
 <div id="fig-composition" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
-<p><img src="./images/composition.png" class="img-fluid figure-img" style="width:80.0%"></p>
+<p><img src="./images/composition.png" class="img-fluid figure-img" style="width:100.0%"></p>
 <p></p><figcaption class="figure-caption">Figure 2: <strong>Composition</strong> <span class="citation" data-cites="RadAssist">[<a href="#ref-RadAssist" role="doc-biblioref">2</a>]</span></figcaption><p></p>
 </figure>
 </div>
@@ -288,7 +290,7 @@ Expand to see TI-RADS Charts
 <div id="tabset-3-2" class="tab-pane" role="tabpanel" aria-labelledby="tabset-3-2-tab">
 <div id="fig-shape" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
-<p><img src="./images/shape.png" class="img-fluid figure-img" style="width:80.0%"></p>
+<p><img src="./images/shape.png" class="img-fluid figure-img" style="width:100.0%"></p>
 <p></p><figcaption class="figure-caption">Figure 4: <strong>Shape: taller-than-wide</strong> <span class="citation" data-cites="ACR-TIRADS-Lexicon">[<a href="#ref-ACR-TIRADS-Lexicon" role="doc-biblioref">3</a>]</span></figcaption><p></p>
 </figure>
 </div>
@@ -342,7 +344,7 @@ Expand to see TI-RADS Charts
 <div id="tabset-4-2" class="tab-pane" role="tabpanel" aria-labelledby="tabset-4-2-tab">
 <div id="fig-margin" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
-<p><img src="./images/margin.png" class="img-fluid figure-img" style="width:80.0%"></p>
+<p><img src="./images/margin.png" class="img-fluid figure-img" style="width:100.0%"></p>
 <p></p><figcaption class="figure-caption">Figure 5: <strong>Margin</strong> <span class="citation" data-cites="ACR-TIRADS-Lexicon ACR-TIRADS-UserGuide RadAssist">[<a href="#ref-RadAssist" role="doc-biblioref">2</a>,<a href="#ref-ACR-TIRADS-Lexicon" role="doc-biblioref">3</a>,<a href="#ref-ACR-TIRADS-UserGuide" role="doc-biblioref">5</a>]</span></figcaption><p></p>
 </figure>
 </div>
@@ -403,7 +405,7 @@ Expand to see TI-RADS Charts
 <div id="tabset-5-2" class="tab-pane" role="tabpanel" aria-labelledby="tabset-5-2-tab">
 <div id="fig-echogenic-foci" class="quarto-figure quarto-figure-center anchored">
 <figure class="figure">
-<p><img src="./images/echogenic-foci.png" class="img-fluid figure-img" style="width:80.0%"></p>
+<p><img src="./images/echogenic-foci.png" class="img-fluid figure-img" style="width:100.0%"></p>
 <p></p><figcaption class="figure-caption">Figure 6: <strong>Echogenic foci</strong> <span class="citation" data-cites="ACR-TIRADS-Lexicon RadAssist">[<a href="#ref-RadAssist" role="doc-biblioref">2</a>,<a href="#ref-ACR-TIRADS-Lexicon" role="doc-biblioref">3</a>]</span></figcaption><p></p>
 </figure>
 </div>
@@ -440,7 +442,7 @@ How to measure size ?
 </div>
 <div id="callout-3" class="callout-3-contents callout-collapse collapse">
 <div class="callout-body-container callout-body">
-<p>Use maximal diameter in longitudinal, AP, or transverse plane <span class="citation" data-cites="ACR-TIRADS-Lexicon">[<a href="#ref-ACR-TIRADS-Lexicon" role="doc-biblioref">3</a>]</span>.</p>
+<p>The nodule should be measured using <strong>maximal diameter</strong> in longitudinal, AP, or transverse plane <span class="citation" data-cites="ACR-TIRADS-Lexicon">[<a href="#ref-ACR-TIRADS-Lexicon" role="doc-biblioref">3</a>]</span>.</p>
 </div>
 </div>
 </div>
