--- a/app-tirads-calc.html
+++ b/app-tirads-calc.html
@@ -84,7 +84,7 @@ div.csl-indent {
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
 <div class="quarto-title-block"><div><h1 class="title">ACR TI-RADS Calculator</h1><button type="button" class="btn code-tools-button" id="quarto-code-tools-source" data-quarto-source-url="https://github.com/Lightbridge-KS/tirads-calc"><i class="bi"></i> Code</button></div></div>
-<p class="subtitle lead">A Calculator for Thyroid Imaging Reporting &amp; Data System</p>
+<p class="subtitle lead">A Calculator for Thyroid Imaging Reporting &amp; Data System <img src="images/cover.png" align="right" height="100"></p>
 </div>
 
 
